# maze-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/: maze.hpp  maze_generator.h  maze_utils.h
src/: dynamic_array.c  dynamic_array.h  main.c  main.cpp  maze.cpp  maze_generator.c  maze_utils.c
